Changed between 1.3.2 and 1.3.3
===============================
- Fix all 3 style menus for any translation (#61007)
- Fix loading of tabulators in old KWord documents (part of #73351)

Changed between 1.3.1 and 1.3.2
===============================
- Fixed wrong printing of frame borders due to excessive clipping (#81222)
- Turning off the "Create backup file" option now works.

Changes between 1.3 and 1.3.1
=============================
- Fixed "add bookmark" for the case where there's no selection
- Keep bookmark valid after deleting its paragraph
- Usability improvements in "select bookmark" dialog
- Fixed drawing of borders for copied frames (e.g. header/footers)
- Fixed "text doesn't immediately run around copied frame on new page" (#73819)
- Fixed crash when activating text view mode and there's no text frameset (#64952)
- Allow to save custom shortcuts for 'insert variable' actions
- Fixed crash when undoing a paste action
- Fixed crash related to tables and deleting frames
- Fixed crash when pasting plain text over a selection (#78561)
- Fixed wrong conversion of values in config dialog when switching units (#65972)
- OOWriter import/export: many improvements

Last changes for KWord-1.3
==========================
- Load and save the frames order ("z index")
- Fixed swapped resize mouse cursors with Qt-3.1.2
- Fixed table column resizing (avoid overlapping columns)

Changes after KWord 1.3 rc (1.2.94)
===================================
- Fixed crash in table operations (#66349)
- Fixed crash in table iterator
- Fixed "edit frameset" for tables in doc structure panel (#67084)
- Save "no underline" explicitely if the paraglayout says "underline" but the
  user removed the underline (#67735)
- Fixed successive image DnD
- Fixed the default document font (#69166)

Changes after KWord 1.3 beta4
=============================
- fix for frames extending beyond the page getting the wrong size in 'preview mode'